fix some scrollbar issue

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -36,8 +36,16 @@ nav.layout
     height: -webkit-calc(100% - 3.5em + 1px)
     height: -moz-calc(100% - 3.5em + 1px)
     height: calc(100% - 3.5em + 1px)
-    padding-bottom: 3em
-    overflow: auto
+    padding: .5em 0
+    overflow: hidden
+
+    > ol
+      // posi
+      margin: 0
+      // box
+      height: 100%
+      overflow-y: auto
+      padding: 1em 0 3em
 article.layout
   // posi
   position: relative
